objects/vlocity_cmt__PremisesPartyRelationship__c.object
<CustomObject>
    <description>Represents relationships between a premises and the organizations, people, households or other parties that have a relationship to the premises. For example, an owner relationship, facility manager relationship, tenant relationship, or legal representative relationship.</description>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <label>Party</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>PremisesPartyRelationships</relationshipLabel>
        <relationshipName>PremisesPartyRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyRelationshipTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Relationship Type</label>
        <referenceTo>vlocity_cmt__PartyRelationshipType__c</referenceTo>
        <relationshipLabel>PremisesPartyRelationships</relationshipLabel>
        <relationshipName>PremisesPartyRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <description>Premises Id</description>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>PremisesPartyRelationships</relationshipLabel>
        <relationshipName>PremisesPartyRelationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PremisesPartyRelationship</label>
    <nameField>
        <label>PremisesPartyRelationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PremisesPartyRelationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>